# easy-rdf-endpoint

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.ghcr.yml  docker-compose.yml
.github/workflows/: docker-build.yml
data/: catalog.rdf
data/shacl/dcat-ap-es/1.0.0/: shacl_dataset_shape.ttl
data/shacl/nti-risp/1.0.0/: nti-risp_catalog_shape.ttl  nti-risp_common_shapes.ttl  nti-risp_dataset_shape.ttl  nti-risp_distribution_shape.ttl  nti-risp_shacl_imports.ttl
docker/: Dockerfile
docker/docker-entrypoint.d/: start_server.sh
docker/setup/: index.html  robots.txt
easy-rdf-endpoint/: Dockerfile  Dockerfile.sparql  Dockerfile.validator  pyproject.toml
easy-rdf-endpoint/docker-entrypoint.d/: validator-entrypoint.sh
easy-rdf-endpoint/docker-entrypoint.d/rdf-validator/: download-ontologies.sh  entrypoint.sh  ont-policy.ttl
easy-rdf-endpoint/setup/rdflib-endpoint/: sparql_override.py  yasgui.html
nginx/: Dockerfile
nginx/setup/: default.conf.template  easy-rdf-endpoint_local.crt  easy-rdf-endpoint_local.key
nginx/setup/css/: common.css  index.css  yasgui.css
nginx/setup/html/: index.html  robots.txt
src/: app.py  requirements.txt
src/rdf-validator/: app.py  app_shacl_results_viewer.py  config.py  download_ontologies.py  log.py  profiles_manager.py  requirements.txt  riot_validator.py  shacl_validator.py  utils.py
