[project]
name = "sparql-endpoint"
version = "0.1.0"
description = "SPARQL Endpoint para servir archivos RDF"
authors = [
    {name = "mjanez"},
]
dependencies = [
    "rdflib-endpoint[web,cli,oxigraph]>=0.5.1",
]
requires-python = ">=3.11"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"